force-app/main/default/objects/Book__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Autobiographies</fullName>
            </value>
            <value>
                <fullName>Biographies</fullName>
            </value>
            <value>
                <fullName>Classics</fullName>
            </value>
            <value>
                <fullName>Comic Book</fullName>
            </value>
            <value>
                <fullName>Cookbooks</fullName>
            </value>
            <value>
                <fullName>Detective</fullName>
            </value>
            <value>
                <fullName>Essays</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Graphic Novel</fullName>
            </value>
            <value>
                <fullName>Historical Fiction</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Literary Fiction</fullName>
            </value>
            <value>
                <fullName>Memoir</fullName>
            </value>
            <value>
                <fullName>Mystery</fullName>
            </value>
            <value>
                <fullName>Poetry</fullName>
            </value>
            <value>
                <fullName>Romance</fullName>
            </value>
            <value>
                <fullName>Science Fiction (Sci-Fi)</fullName>
            </value>
            <value>
                <fullName>Self-Help</fullName>
            </value>
            <value>
                <fullName>Short Stories</fullName>
            </value>
            <value>
                <fullName>Suspense</fullName>
            </value>
            <value>
                <fullName>Thrillers</fullName>
            </value>
            <value>
                <fullName>True Crime</fullName>
            </value>
            <value>
                <fullName>Women&apos;s Fiction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>