force-app/main/default/objects/Book__c/fields/Photo_Id__c.field-meta.xml
<CustomField>
    <fullName>Photo_Id__c</fullName>
    <label>Photo Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>