force-app/main/default/objects/Book__c/fields/Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Photo_URL__c</fullName>
    <formula>&quot;/sfc/servlet.shepherd/version/download/&quot; &amp; Photo_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo URL</label>
    <type>Text</type>
</CustomField>