force-app/main/default/objects/Book__c/fields/Reservation_Limit__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Limit__c</fullName>
    <defaultValue>14</defaultValue>
    <inlineHelpText>in days</inlineHelpText>
    <label>Reservation Limit</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>